# stocks-viewer

./: Dockerfile  README.md  deployment.yml  pyproject.toml
app/: app.py
