[tool.poetry]
name = "algotrade"
version = "0.1.0"
description = ""
authors = ["ycfeng1107@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8, !=3.9.7"
yfinance = "^0.2.18"
streamlit = "^1.22.0"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
